--- a/TODO
+++ b/TODO
@@ -377,7 +377,12 @@ We could probably push this idea for noninterf x among S.
       "query secret" and in "public_vars"? what does CryptoVerif?
       Do the same in ProVerif. I think there is at least one problem:
       variables defined as arguments of processes may disappear in the
-      final process and thus be ignored by "query secret" and in "public_vars".)
+      final process and thus be ignored by "query secret" and in
+      "public_vars".
+      Looking at the source, CryptoVerif ignores all variables of
+      letfun, arguments and others. It takes into account the
+      arguments of output processes, but yields an error in case
+      an argument of an input process is referenced in a query.)
    - allow replication indices in events (replication indices
    correspond to the session identifiers of ProVerif)
       
