--- a/TODO
+++ b/TODO
@@ -379,7 +379,7 @@ We could probably push this idea for noninterf x among S.
    ProVerif can stop or automatically separate the queries when the
    "public_var ..." qualifiers of several queries in a group are
    incompatible (that is, different).
-      TO DO reset occurrences either during encoding of the process
+      DONE reset occurrences either during encoding of the process
    or just after (using a function that just resets occurrences
    without creating variables)
       TO DO how are variables arguments of letfun, defined in letfun,
