--- a/TODO
+++ b/TODO
@@ -297,6 +297,8 @@ more transformations with the square variant.
       TO DO [test] Modify GDH to allow m -> exp(g, mult(m,a)) as an oracle,
       left unchanged, without corrupting a.
       (It can be computed as exp(exp(g,a),m) and exp(g,a) is public.)
+      TO DO ROM...all_args and ICM...all_args with variables and channel of
+      oracles as arguments.
 
    h) TO DO (Benjamin) Revise examples manually to use the new crypto library
    Use authenticated encryption as the symmetric encryption scheme
@@ -406,6 +408,7 @@ We could probably push this idea for noninterf x among S.
       they are used in queries. It writes an error message when
       variables defined in terms are referenced in queries (because
       the expansion of terms may change when they are defined).
+      TO DO document new queries
    - allow replication indices in events, tables, and arguments of
    processes and letfun (replication indices
    correspond to the session identifiers of ProVerif)
