--- a/TODO
+++ b/TODO
@@ -414,6 +414,7 @@ We could probably push this idea for noninterf x among S.
       variables defined in terms are referenced in queries (because
       the expansion of terms may change when they are defined).
       DONE document new queries
+      TO DO style emacs .pcv
    - allow replication indices in events, tables, and arguments of
    processes and letfun (replication indices
    correspond to the session identifiers of ProVerif)
