--- a/emacs/README
+++ b/emacs/README
@@ -9,6 +9,8 @@ To use this mode:
 
         (setq auto-mode-alist
 	      (cons '("\\.cv[l]?$" . cryptoverif-mode) 
-              (cons '("\\.ocv[l]?$" . cryptoverifo-mode) auto-mode-alist)))
+              (cons '("\\.ocv[l]?$" . cryptoverifo-mode)
+	      (cons '("\\.pcv$" . pcv-mode) auto-mode-alist))))
         (autoload 'cryptoverif-mode "cryptoverif" "Major mode for editing CryptoVerif code." t)
         (autoload 'cryptoverifo-mode "cryptoverif" "Major mode for editing CryptoVerif code." t)
+        (autoload 'pcv-mode "cryptoverif" "Major mode for editing ProVerif and CryptoVerif code." t)
