--- a/TODO
+++ b/TODO
@@ -389,7 +389,7 @@ We could probably push this idea for noninterf x among S.
       DONE reset occurrences either during encoding of the process
    or just after (using a function that just resets occurrences
    without creating variables)
-      TO DO [test] how are variables arguments of letfun, defined in letfun,
+      DONE how are variables arguments of letfun, defined in letfun,
       arguments of processes treated? Can they be used in
       "query secret" and in "public_vars"? what does CryptoVerif?
       Do the same in ProVerif. I think there is at least one problem:
@@ -414,7 +414,7 @@ We could probably push this idea for noninterf x among S.
       variables defined in terms are referenced in queries (because
       the expansion of terms may change when they are defined).
       DONE document new queries
-      TO DO style emacs .pcv
+      DONE style emacs .pcv
    - allow replication indices in events, tables, and arguments of
    processes and letfun (replication indices
    correspond to the session identifiers of ProVerif)
