--- a/TODO
+++ b/TODO
@@ -54,8 +54,8 @@ exp(g,mult(a,b)) = exp(exp(g,b), a')
 
 Similarly, the squares can be simplified by square CDH.
 
-=> Done in CDH, GDH, square CDH, do it in square GDH.
-Check probability formulas.
+=> Done in CDH, GDH, square CDH, square GDH.
+TO DO Check probability formulas.
 
 GDH prime order: we use the "prime order" assumption in GDH to simplify
 exp(m,b) = exp(exp(g,a),b) into m = exp(g,a)
@@ -73,7 +73,10 @@ Furthermore, the GDH_prime_order case can be obtained by combining
 this plus the other properties in common_DH_prime_order
 without writing a specific equivalence.
 
-Done in GDH, to do in square GDH
+Done in GDH, square GDH
+
+TO DO find what assumptions that come from the group are really
+useful in practice.
 
 1) Incompatible front-end, second step
 
